Fix overflown portrait photos on small devices

--- a/server/static/css/photo.css
+++ b/server/static/css/photo.css
@@ -101,6 +101,10 @@
     display: none;
   }
 
+  .photo-wrapper {
+    width: 100%;
+  }
+
   .photo-wrapper img {
     width: 100%;
     max-width: 100%;
